# IC10_Interpreter

./: .gitignore  CMakeLists.txt  Data_structs.h  Grammer.h  Lexer.c  Lexer.h  Parser.c  Parser.h  main.c  tokenlist.h
include/: Data_structs.h  Grammer.h  Lexer.h  Parser.h  Util.h  debug.h  executor.h  interp_math.h  readEnviroment.h  tokenlist.h  tui.h
src/: Lexer.c  Parser.c  Util.c  debug.c  executor.c  main.c  readEnviroment.c  tui.c
test_data/: LB_test.ic10e  ev_test.ic10e  ltest.txt  pars_t.txt  sim.ic10e  test.txt  tst.txt
tools/: enum_creater.xlsx
